--- a/software/kozos/Makefile
+++ b/software/kozos/Makefile
@@ -7,8 +7,8 @@ LFLAGS=-static -nostdlib -T ld.scr
 
 TARGET=kozos
 
-$(TARGET): startup.s intr.S main.c interrupt.c serial.c lib.c kozos.c syscall.c \
-		test09_1.c test09_2.c test09_3.c
+$(TARGET): startup.s intr.S main.c interrupt.c serial.c lib.c kozos.c syscall.c memory.c \
+		test10_1.c
 	$(CC) $(CFLAGS) $(LFLAGS) -o $@ $^
 
 .PHONY: clean
