--- a/software/kozos/Makefile
+++ b/software/kozos/Makefile
@@ -8,7 +8,7 @@ LFLAGS=-static -nostdlib -T ld.scr
 TARGET=kozos
 
 $(TARGET): startup.s intr.S main.c interrupt.c serial.c lib.c kozos.c syscall.c memory.c \
-		test10_1.c
+		test11_1.c test11_2.c
 	$(CC) $(CFLAGS) $(LFLAGS) -o $@ $^
 
 .PHONY: clean
